<resources>
    <string name="app_name">HAB-DAY</string>
    <string name="HaBDay">HaBDay</string>

    <!-- Login -->
    <string name="naver_login">네이버로 로그인</string>
    <string name="txt_start_HAB_DAY"><u>HAB-DAY가 처음이세요?</u></string>

    <!-- Main Activity -->
    <string name="main_D_day">OOO님\n생일까지 OO일 남았습니다</string>
    <string name="finish_funding">내가 받은 선물</string>
    <string name="progressing_funding">받고 싶은 선물</string>
    <string name="my_participation_funding">내가 준 선물</string>

    <!-- both -->
    <string name="funding_title">선물 이름</string>
    <string name="funding_cost">선물 금액</string>
    <string name="funding_term">2023.02.03 ~ 2023.03.03</string>
    <string name="success">성공</string>
    <string name="failure">실패</string>

    <string name="d_day">D - 6</string>
    <string name="funder_name">펀딩 생성자 이름</string>
    <string name="my_fund_amount">내가 펀딩한 금액</string>

    <!-- AddFundingActivity -->
    <string name="add_funding">내가 받고 싶은 선물</string>
    <string name="funding_img_txt">상품 이미지(1장)</string>
    <string name="funding_goal_cost_txt">목표 금액</string>
    <string name="funding_term_txt">선물 받기 시작일을 선택해주세요\n(선물하기는 생일 전날까지 가능합니다)</string>
    <string name="funding_information_txt">선물 소개하기</string>
    <string name="funding_add_checkbox">펀딩 완료 시 2주 이내에 사진과 함께 상품 구매 인증이 필요합니다. 또한, 펀딩 실패하면 펀딩 진행자는 기존 상품과 다른 상품을 구매할 수 있습니다. 만약 펀딩 인증을 하지 않을 시, 후에 펀딩 생성이 불가합니다.</string>
    <string name="finish_add_funding">완료</string>
    <string name="add_funding_img_txt">+</string>
    <string name="add_funding_goal_txt">원</string>
    <string name="add_funding_select_term">선물 가능한 기간을 선택해주세요</string>

    <!-- FinishAddingFundingActivity -->
    <string name="finish_adding_funding_txt">새로운 펀딩을 생성했습니다</string>
    <string name="share_link">링크 복사하기</string>
    <string name="go_to_home">홈으로 돌아가기</string>

    <!-- DetailFundingActivity -->
    <string name="detail_funding_name">펀딩 이름</string>
    <string name="detail_funding_term">2023.02.04 ~ 2023.02.24</string>
    <string name="detail_funding_information">fund Detail\n어쩌구 저쩌구\n저 이거 갖고 싶습니다!</string>
    <string name="detail_funding_finish_date">펀딩 만료일까지</string>
    <string name="detail_funding_now_amount">현재</string>
    <string name="detail_funding_now_funding_amount">현재 이만큼 받았어요</string>
    <string name="detail_funding_goal_amount">이만큼 받고 싶어요</string>
    <string name="detail_funding_present_cost">원하는 선물 금액</string>
    <string name="detail_funding_progressing">진행중</string>
    <string name="detail_funding_until_finish">마감일까지</string>
    <string name="detail_funding_my_txt">나의 후원금: 20,000원</string>

    <string name="detail_funding_funder_list">선물을 준 친구</string>
    <string name="detail_funding_funder_number">16</string>
    <string name="detail_funding_funder_name">친구 이름</string>
    <string name="detail_funding_funder_date">후원 날짜</string>
    <string name="detail_funding_funder_message">응원 문구\n어쩌구 저쩌구~~~</string>
    <string name="detail_funding_confirm_btn">인증하기</string>


    <!-- CertifyFundingActivity -->
    <string name="certify_funding_title">인증합니다</string>
    <string name="certify_funding_title_hint">제목</string>
    <string name="certify_funding_img_title">인증 이미지(1장)</string>

    <!-- ModifyFunding -->
    <string name="modify_funding">선물 정보 수정하기</string>

    <!-- DeleteFunding -->
    <string name="delete_funding">펀딩 삭제</string>

</resources>