<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.MainActivity">

    <TextView
        android:id="@+id/tv_main_D_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_D_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_D_day_margin_top"
        android:layout_marginStart="@dimen/main_D_day_margin_start"
        android:textColor="@color/black"
        android:textSize="@dimen/main_D_day_txt_size"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_D_day"
        android:theme="@style/TabTheme"
        android:layout_marginTop="@dimen/main_tab_layout_margin_top"
        android:layout_marginHorizontal="@dimen/main_tab_layout_margin_horizontal">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_funding"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressing_funding"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_participation_funding"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tl_main"
        />

</androidx.constraintlayout.widget.ConstraintLayout>