<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_progressing_funding"
        android:layout_width="@dimen/img_funding_size"
        android:layout_height="@dimen/img_funding_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/between_margin_recycler_margin_top"
        android:backgroundTint="@color/light_yellow"
        app:cardCornerRadius="@dimen/img_funding_radius"
        app:cardElevation="@dimen/card_elevation">
        <ImageView
            android:id="@+id/iv_progressing_funding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_max1"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_progressing_funding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funding_title"
        android:textColor="@color/black"
        android:textSize="@dimen/funding_title_txt_size"
        app:layout_constraintStart_toEndOf="@+id/cv_progressing_funding"
        app:layout_constraintTop_toTopOf="@+id/cv_progressing_funding"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        />

    <TextView
        android:id="@+id/tv_d_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_progressing_funding_title"
        app:layout_constraintStart_toEndOf="@id/tv_progressing_funding_title"
        android:layout_marginStart="@dimen/margin_start_txt_d_day"
        android:paddingVertical="@dimen/padding_vertical_success_or_not"
        android:paddingHorizontal="@dimen/padding_horizontal_success_or_not"
        android:text="@string/d_day"
        android:textColor="@color/light_sky_blue"
        android:textSize="@dimen/txt_size_success_or_not"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"
        android:background="@drawable/bg_rectangle_light_sky_blue_radius_20"
        />

    <TextView
        android:id="@+id/tv_progressing_funder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funder_name"
        android:textColor="@color/black"
        android:textSize="@dimen/funding_cost_txt_size"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_progressing_funding_title"
        app:layout_constraintStart_toEndOf="@+id/cv_progressing_funding"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:layout_marginTop="@dimen/funding_cost_margin_top"/>

    <TextView
        android:id="@+id/tv_progressing_funding_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_fund_amount"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/funding_term_txt_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_progressing_funder_name"
        app:layout_constraintStart_toEndOf="@+id/cv_progressing_funding"
        app:layout_constraintBottom_toBottomOf="@+id/cv_progressing_funding"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:layout_marginTop="@dimen/funding_cost_margin_top"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"/>

    <ImageView
        android:id="@+id/iv_right_arrow"
        android:layout_width="@dimen/right_arrow_size"
        android:layout_height="@dimen/right_arrow_size"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintTop_toTopOf="@id/cv_progressing_funding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>