<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_participation_funding"
        android:layout_width="@dimen/img_funding_size"
        android:layout_height="@dimen/img_funding_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/between_margin_recycler_margin_top"
        android:backgroundTint="@color/light_yellow"
        app:cardCornerRadius="@dimen/img_funding_radius"
        app:cardElevation="@dimen/card_elevation"
        />

    <TextView
        android:id="@+id/tv_my_participation_funding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/funding_title_margin_top"
        android:text="@string/funding_title"
        android:textColor="@color/black"
        android:textSize="@dimen/funding_title_txt_size"
        app:layout_constraintStart_toEndOf="@+id/cv_my_participation_funding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:includeFontPadding="false"
        />

    <TextView
        android:id="@+id/tv_my_participation_funding_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funding_cost"
        android:textColor="@color/black"
        android:textSize="@dimen/funding_cost_txt_size"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_participation_funding_title"
        app:layout_constraintStart_toEndOf="@+id/cv_my_participation_funding"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:layout_marginTop="@dimen/funding_cost_margin_top"/>

    <TextView
        android:id="@+id/tv_my_participation_funding_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funding_term"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/funding_term_txt_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_participation_funding_cost"
        app:layout_constraintStart_toEndOf="@+id/cv_my_participation_funding"
        android:layout_marginStart="@dimen/margin_between_img_txt"
        android:layout_marginTop="@dimen/funding_cost_margin_top"/>

    <ImageView
        android:id="@+id/iv_right_arrow"
        android:layout_width="@dimen/right_arrow_size"
        android:layout_height="@dimen/right_arrow_size"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintTop_toTopOf="@id/cv_my_participation_funding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>